# kr_utils

./: .gitignore  README.md
kr_cmake_modules/: CMakeLists.txt  README.md  package.xml
kr_cmake_modules/cmake/Modules/: FindG2o.cmake  FindGtest.cmake  FindGtsam.cmake  FindOgre.cmake  FindOmpl.cmake  FindQGLViewer.cmake  Findg2o.cmake  Findgtest.cmake  Findgtsam.cmake
kr_common/: CMakeLists.txt  README.md  package.xml
kr_common/examples/: test_pretty_print.cpp  test_profiler.cpp  test_sample.cpp  test_termcolor.cpp
kr_common/include/kr_common/: kr_common.hpp  pretty_print.hpp  pretty_printer.hpp  prettyprint.hpp  profiler.hpp  ros_helper.hpp  sample.hpp  termcolor.hpp  timer.hpp  type_name.hpp
kr_common/test/: test_pretty_printer.cpp  test_profiler.cpp  test_ros_helper.cpp  test_sample.cpp  test_timer.cpp  test_type_name.cpp  test_url_parser.cpp
kr_math/: CMakeLists.txt  README.md  package.xml
kr_math/cmake/: extras.cmake  extras.cmake.in
kr_math/include/kr_math/: SO3.hpp  base_types.hpp  pose.hpp  yaml.hpp
kr_math/test/: SO3_test.cpp  pose_test.cpp
kr_vision/: CMakeLists.txt  package.xml
kr_vision/include/kr_vision/: feature.hpp
kr_viz/: CMakeLists.txt  package.xml
kr_viz/include/kr_viz/qglviewer/: camera.hpp  camera_viewer.hpp  points.hpp  spiral.hpp  texture.hpp
kr_viz/kr_viz/: CMakeLists.txt  package.xml
kr_viz/rviz_ba_viewer/: CMakeLists.txt  package.xml  plugin_description.xml
kr_viz/rviz_ba_viewer/include/rviz_ba_viewer/: ba_display.h  feature_rays_object.hpp  keyframe_object.hpp
kr_viz/rviz_ba_viewer/msg/: BaGraph.msg  BaPoint.msg  KeyFrame.msg
kr_viz/rviz_ba_viewer/src/: ba_display.cpp  feature_rays_object.cpp  keyframe_object.cpp
kr_viz/rviz_depth_filter/: CMakeLists.txt  package.xml  plugin_description.xml
kr_viz/rviz_depth_filter/include/rviz_depth_filter/: depth_filter_display.h
kr_viz/rviz_depth_filter/msg/: DepthFilter.msg
kr_viz/rviz_depth_filter/src/: depth_filter_display.cpp
kr_viz/rviz_helper/: CMakeLists.txt  package.xml
kr_viz/rviz_helper/include/rviz_helper/: colors.h  colors.hpp  kr_marker.hpp  marker_publisher.h  marker_visualizer.hpp  tf_publisher.hpp  visualizer.h  viz_manager.hpp
kr_viz/rviz_helper/samples/: sample_viz.cpp
kr_viz/rviz_helper/samples/sample_visualization/: main.cpp
kr_viz/rviz_helper/src/: kr_viz.cpp  marker_covariance.cpp  marker_visualizer.cpp  visualizer.cpp
kr_viz/src/qglviewer/: camera.cpp  camera_viewer.cpp  texture.cpp  viewer_main.cpp
rviz_helper/: package.xml
rviz_helper/include/rviz_helper/: colors.h  visualizer.h
rviz_helper/src/: visualizer.cpp
