<?xml version="1.0"?>
<package>
    <name>kr_common</name>
    <version>0.0.0</version>
    <description>The kr_common package</description>

    <maintainer email="quchao@seas.upenn.edu">chao</maintainer>

    <license>Apache2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>

    <test_depend>gtest</test_depend>
</package>
