<?xml version="1.0"?>
<package>
  <name>kr_math</name>
  <version>0.0.1</version>
  <description>Collection of math utilities for use with robotics</description>

  <maintainer email="gcross.code@icloud.com">gcross</maintainer>
  <author>Gareth Cross</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>
