<?xml version="1.0"?>
<package format="2">
  <name>kr_math</name>
  <version>0.0.1</version>
  <description>Collection of math utilities for use with robotics</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <author>Gareth Cross</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>geometry_msgs</depend>

  <test_depend>rosunit</test_depend>
</package>
