<?xml version="1.0"?>
<package>
    <name>kr_viz</name>
    <version>0.0.0</version>
    <description>The kr_viz package</description>

    <maintainer email="quchao@seas.upenn.edu">chao</maintainer>
    <maintainer email="gcross@seas.upenn.edu">gareth</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>kr_cmake_modules</build_depend>

    <run_depend>kr_cmake_modules</run_depend>

    <export>
    </export>
</package>
