<?xml version="1.0"?>
<package>
  <name>rviz_ba_viewer</name>
  <version>0.0.1</version>
  <description>Display Bundle Adjustment graph in RViz</description>
  <author>Gareth Cross</author>
  <author>Chao Qu</author>
  <maintainer email="gcross.code@icloud.com">Gareth</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>kr_cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>kr_cmake_modules</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
