<?xml version="1.0"?>
<package format="2">
  <name>rviz_ba_viewer</name>
  <version>0.0.1</version>
  <description>Display Bundle Adjustment graph in RViz</description>
  <author>Gareth Cross</author>
  <author>Chao Qu</author>
  <maintainer email="gcross.code@icloud.com">Gareth</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>kr_cmake_modules</depend>
  <depend>image_geometry</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
